--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=8080
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/Book_Info?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true 
