--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=goodsmile
+spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
