--- a/pom.xml
+++ b/pom.xml
@@ -25,18 +25,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-
         <!-- MySQL连接驱动 -->
         <dependency>
             <groupId>mysql</groupId>
@@ -66,7 +67,6 @@
             <version>1.8.2</version>
             <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 
