重新修改了Spring Security部分，添加了部分单元测试代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=goodsmile
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
+
+jwt.header=Authorization
+jwt.secret= mySecret
+#token有效期一天
+jwt.expiration= 86400
+jwt.tokenHead="Bearer "
