--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 
 jwt.header=Authorization
-jwt.secret= mySecret
+jwt.secret= rerewrwerewrwerwerwerwerwerewrwerewrwerwerewrew
 #token有效期一天
 jwt.expiration= 86400
 jwt.tokenHead="Bearer "
