--- a/src/main/resources/Docker/docker-compose.yml
+++ b/src/main/resources/Docker/docker-compose.yml
@@ -1,15 +1,15 @@
-version: '2.2'
+version: '3.7'
 
 services:
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0.29
     container_name: mysql
     ports:
       - 3306:3306
     volumes:
-      - "./mysqldata:var/lib/mysql"
+      - ./mysqldata:var/lib/mysql
     environment:
-      - "MYSQL_ROOT_PASSWORD=123456"
+      - MYSQL_ROOT_PASSWORD=123456
     networks:
       - bookstore_bridge
 
